Minor edits to readme

--- a/members.html
+++ b/members.html
@@ -101,9 +101,6 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
-.html-widget {
-  margin-bottom: 20px;
-}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -212,8 +209,10 @@ $(document).ready(function () {
 
 
 <!---
+README:
 This is really annoying to edit - the tables are really finicky about spaces - maybe convert to something else - r markdown?
 The table widths are relative to the longest column, hence the &nbsp; &nbsp; padding to make sure alignment is right
+Also it's best to edit it with a text editor that doesn't wrap lines
 -->
 <div id="leon-french-principal-investigator" class="section level4">
 <h4>Leon French, Principal Investigator</h4>
@@ -228,15 +227,15 @@ The table widths are relative to the longest column, hence the &nbsp; &nbsp; pad
 <img src="images/Leon.picture.jpg" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>Independent Scientist, Krembil Centre for Neuroinformatics, </b>
-<b>Campbell Family Mental Health Research Institute at CAMH</b>
-<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b>
-<b> Associate Member, Institute of Medical Science, University of Toronto</b>
-Toronto, Ontario, Canada
- <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a>
- <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a>
- <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a>
- <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></div></td>
+<td><p><b>Independent Scientist, Krembil Centre for Neuroinformatics, </b><br />
+<b>Campbell Family Mental Health Research Institute at CAMH</b><br />
+<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />
+<b> Associate Member, Institute of Medical Science, University of Toronto</b><br />
+Toronto, Ontario, Canada<br />
+ <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a><br />
+ <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a><br />
+ <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a><br />
+ <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></p></td>
 </tr>
 </tbody>
 </table>
@@ -255,9 +254,9 @@ Toronto, Ontario, Canada
 <img src="images/derek.jpeg" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>MSc, University of Toronto</b>
-d(dot)howard(at)mail.utoronto.ca
-                                                                                         </div></td>
+<td><p><b>MSc, University of Toronto</b><br />
+d(dot)howard(at)mail.utoronto.ca<br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -276,11 +275,11 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="images/pegah.png" width="150" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>Research Analyst in Machine Learning</b>
-<b>MSc, Computer Science, University of Toronto</b>
-<a href="mailto:pegah.abedesfahani@mail.utoronto.ca">pegah.abedesfahani@mail.utoronto.ca</a>
-<a href="https://www.linkedin.com/in/pegah-abed/">LinkedIn profile</a>
-                                                                                         </div></td>
+<td><p><b>Research Analyst in Machine Learning</b><br />
+<b>MSc, Computer Science, University of Toronto</b><br />
+<a href="mailto:pegah.abedesfahani@mail.utoronto.ca">pegah.abedesfahani@mail.utoronto.ca</a><br />
+<a href="https://www.linkedin.com/in/pegah-abed/">LinkedIn profile</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -299,11 +298,11 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="images/wennie.jpg" width="150" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>Master’s Student</b>
-<b>BSc, Biomedical Computing, Queen’s University</b>
-<a href="mailto:wennie.wu@mail.utoronto.ca">wennie.wu@mail.utoronto.ca</a>
-<a href="https://www.linkedin.com/in/wennie-wu-047755142/">LinkedIn profile</a>
-                                                                                         </div></td>
+<td><p><b>Master’s Student</b><br />
+<b>BSc, Biomedical Computing, Queen’s University</b><br />
+<a href="mailto:wennie.wu@mail.utoronto.ca">wennie.wu@mail.utoronto.ca</a><br />
+<a href="https://www.linkedin.com/in/wennie-wu-047755142/">LinkedIn profile</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -325,9 +324,9 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="images/jenny.png" width="150" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
-<a href="mailto:jenny.yin@mail.utoronto.ca">jenny.yin@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><p><b>BCB and Computer Science, University of Toronto</b><br />
+<a href="mailto:jenny.yin@mail.utoronto.ca">jenny.yin@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -346,9 +345,9 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="images/linwen.png" width="150" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>LMP and Computer Science, University of Toronto</b>
-<a href="mailto:linwenh.huang@mail.utoronto.ca">linwenh.huang@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><p><b>LMP and Computer Science, University of Toronto</b><br />
+<a href="mailto:linwenh.huang@mail.utoronto.ca">linwenh.huang@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -367,9 +366,9 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="images/joelle.JPG" width="150" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>BCB, University of Toronto</b>
-<a href="mailto:joelle.jee@mail.utoronto.ca">joelle.jee@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><p><b>BCB, University of Toronto</b><br />
+<a href="mailto:joelle.jee@mail.utoronto.ca">joelle.jee@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -388,9 +387,9 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="images/justin.jpg" width="150" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>BCB and Statistics program, University of Toronto</b>
-<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><p><b>BCB and Statistics program, University of Toronto</b><br />
+<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -409,9 +408,9 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="images/alana.jpg" width="150" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
-<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><p><b>BCB and Computer Science, University of Toronto</b><br />
+<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -430,9 +429,9 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="https://i.stack.imgur.com/okDq7t.jpg" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>Engineering Science, University of Toronto</b>
-<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><p><b>Engineering Science, University of Toronto</b><br />
+<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
