Adding Minh An as user

--- a/members.html
+++ b/members.html
@@ -101,6 +101,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -302,6 +305,27 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <b>BSc, Biomedical Computing, Queen’s University</b><br />
 <a href="mailto:wennie.wu@mail.utoronto.ca">wennie.wu@mail.utoronto.ca</a><br />
 <a href="https://www.linkedin.com/in/wennie-wu-047755142/">LinkedIn profile</a><br />
+                                                                                         </p></td>
+</tr>
+</tbody>
+</table>
+<hr />
+</div>
+<div id="minh-an-ho-undergraduate-project-student" class="section level4">
+<h4>Minh An Ho, Undergraduate Project Student</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><div class="figure">
+<img src="images/minhan.jpg" width="150" />
+
+</div></td>
+<td><p><b>BCB and Statistics program, University of Toronto</b><br />
+<a href="mailto:minhan.ho@mail.utoronto.ca">minhan.ho@mail.utoronto.ca</a><br />
                                                                                          </p></td>
 </tr>
 </tbody>
