Updated html to match

--- a/members.html
+++ b/members.html
@@ -101,9 +101,6 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
-.html-widget {
-  margin-bottom: 20px;
-}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -326,6 +323,27 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </div></td>
 <td><p><b>BCB and Statistics program, University of Toronto</b><br />
 <a href="mailto:minhan.ho@mail.utoronto.ca">minhan.ho@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
+</tr>
+</tbody>
+</table>
+<hr />
+</div>
+<div id="xindi-zhang-undergraduate-project-student" class="section level4">
+<h4>Xindi Zhang, Undergraduate Project Student</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><div class="figure">
+<img src="images/xindi.jpg" width="150" />
+
+</div></td>
+<td><p><b>BCB and Biology, University of Toronto</b><br />
+<a href="mailto:Xindi.Zhang@mail.utoronto.ca">Xindi.Zhang@mail.utoronto.ca</a><br />
                                                                                          </p></td>
 </tr>
 </tbody>
