--- a/toolsAndData.html
+++ b/toolsAndData.html
@@ -212,9 +212,9 @@ $(document).ready(function () {
 <h3>Online tools</h3>
 <ul>
 <li><a href="https://brain.shinyapps.io/polygenic_celltypes/">Polygenic celltypes</a>: Polygenic celltype tester for the mouse nervous system</li>
-<li><a href="http://www.chibi.ubc.ca/~lfrench/HBAset/">HBASets</a>: a tool for multigene expression mapping in the human brain</li>
-<li><a href="http://www.chibi.ubc.ca/whitetext/app/">WhiteTextWeb</a> indexes connectivity statements in neuroscience literature [source]</li>
-<li><a href="http://excross.chibi.ubc.ca/intersection/">Excross</a>: a tool for multigene expression mapping in the mouse brain</li>
+<li><a href="https://hbaset.msl.ubc.ca/">HBASets</a>: a tool for multigene expression mapping in the human brain</li>
+<li><a href="https://whitetext.msl.ubc.ca/">WhiteTextWeb</a> indexes connectivity statements in neuroscience literature [source]</li>
+<li><a href="https://excross.msl.ubc.ca/">Excross</a>: a tool for multigene expression mapping in the mouse brain</li>
 </ul>
 </div>
 <div id="software-and-data" class="section level3">
