Added layer tool

--- a/toolsAndData.html
+++ b/toolsAndData.html
@@ -101,6 +101,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -208,10 +211,11 @@ $(document).ready(function () {
 </div>
 
 
-<div id="online-tools" class="section level3">
-<h3>Online tools</h3>
+<div id="online-tools---mostly-all-are-prototype-versions" class="section level3">
+<h3>Online tools - mostly all are prototype versions</h3>
 <ul>
 <li><a href="https://brain.shinyapps.io/polygenic_celltypes/">Polygenic celltypes</a>: Polygenic celltype tester for the mouse nervous system</li>
+<li><a href="https://brain.shinyapps.io/polygenic_layers/">Polygenic layers</a>: Polygenic developmental layer tester for human and macaque cortex</li>
 <li><a href="https://hbaset.msl.ubc.ca/">HBASets</a>: a tool for multigene expression mapping in the human brain</li>
 <li><a href="https://whitetext.msl.ubc.ca/">WhiteTextWeb</a> indexes connectivity statements in neuroscience literature [source]</li>
 <li><a href="https://excross.msl.ubc.ca/">Excross</a>: a tool for multigene expression mapping in the mouse brain</li>
