add sejal profile

--- a/members.html
+++ b/members.html
@@ -80,9 +80,7 @@ h6 {
 
 <link rel="stylesheet" href="includes/main.css" type="text/css" />
 
-</head>
 
-<body>
 
 <style type = "text/css">
 .main-container {
@@ -201,8 +199,6 @@ $(document).ready(function () {
 });
 </script>
 
-<div class="container-fluid main-container">
-
 <!-- tabsets -->
 
 <style type="text/css">
@@ -273,6 +269,15 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
+
+
+
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
 
 
 
@@ -451,6 +456,28 @@ d(dot)howard(at)mail.utoronto.ca
 </table>
 <hr />
 </div>
+<div id="sejal-patel-postdoctoral-fellow" class="section level4">
+<h4>Sejal Patel, Postdoctoral Fellow</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><div class="figure">
+<img src="images/sejal.jpg" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>PhD, University of Toronto</b>
+<a href="mailto:sejal.patel@camh.ca">sejal.patel@camh.ca</a>
+<a href="https://ca.linkedin.com/in/sejal-patel-9a9847165/">LinkedIn profile</a>
+                                                                                         </div></td>
+</tr>
+</tbody>
+</table>
+<hr />
+</div>
 <div id="previous-members" class="section level3">
 <h3>Previous members</h3>
 <hr />
@@ -506,7 +533,7 @@ d(dot)howard(at)mail.utoronto.ca
 <tbody>
 <tr class="odd">
 <td><div class="figure">
-<img src="images/joelle.JPG" width="150" />
+<img src="./images/joelle.jpg" width="150" />
 
 </div></td>
 <td><div style="white-space: pre-line;"><b>BCB, University of Toronto</b>
