Added U of T email

--- a/contact.html
+++ b/contact.html
@@ -101,8 +101,14 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
+}
+summary {
+  display: list-item;
 }
 </style>
 
@@ -118,7 +124,6 @@ body {
   padding-top: 56px;
   margin-top: -56px;
 }
-
 .section h2 {
   padding-top: 56px;
   margin-top: -56px;
@@ -138,6 +143,43 @@ body {
 .section h6 {
   padding-top: 56px;
   margin-top: -56px;
+}
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  border-radius: 0 6px 6px 6px;
+}
+.dropdown-submenu:hover>.dropdown-menu {
+  display: block;
+}
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #cccccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+.dropdown-submenu:hover>a:after {
+  border-left-color: #ffffff;
+}
+.dropdown-submenu.pull-left {
+  float: none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+  border-radius: 6px 0 6px 6px;
 }
 </style>
 
@@ -159,18 +201,77 @@ $(document).ready(function () {
 });
 </script>
 
-
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
+
+<style type="text/css">
+.tabset-dropdown > .nav-tabs {
+  display: inline-table;
+  max-height: 500px;
+  min-height: 44px;
+  overflow-y: auto;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
+  content: "&#xe258;";
+  border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs > li.active {
+  display: block;
+}
+
+.tabset-dropdown > .nav-tabs > li > a,
+.tabset-dropdown > .nav-tabs > li > a:focus,
+.tabset-dropdown > .nav-tabs > li > a:hover {
+  border: none;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li {
+  display: block;
+  float: none;
+}
+
+.tabset-dropdown > .nav-tabs > li {
+  display: none;
+}
+</style>
+
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
 });
+
+$(document).ready(function () {
+  $('.tabset-dropdown > .nav-tabs > li').click(function () {
+    $(this).parent().toggleClass('nav-tabs-open')
+  });
+});
 </script>
 
 <!-- code folding -->
-
 
 
 
@@ -210,10 +311,10 @@ $(document).ready(function () {
 
 <div id="mailing-address" class="section level3">
 <h3>Mailing Address:</h3>
-<p>Dr. Leon French<br />
-Centre for Addiction and Mental Health (CAMH)<br />
-250 College Street.<br />
-Toronto, ON, Canada, M5T1R8</p>
+<div style="white-space: pre-line;">Dr. Leon French
+Centre for Addiction and Mental Health (CAMH)
+250 College Street.
+Toronto, ON, Canada, M5T1R8</div>
 <p><a href="http://www.osm.utoronto.ca/map/wwv_flow_file_mgr.get_file?p_security_group_id=1410000632844518&amp;p_fname=webmapgifJune2012.gif">University of Toronto Campus map</a></p>
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
 <div style="overflow:hidden;height:440px;width:800px;">
@@ -232,9 +333,10 @@ Toronto, ON, Canada, M5T1R8</p>
 </div>
 <div id="online" class="section level3">
 <h3>Online:</h3>
-<p>Email: <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a><br />
-<a href="http://neuroinformaticslab.github.io">Website</a><br />
-<a href="https://github.com/computationalneurobiology">GitHub</a></p>
+<div style="white-space: pre-line;">Email: <a href="mailto:leon.french@utoronto.ca">leon.french@utoronto.ca</a>
+Email: <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a>
+<a href="http://neuroinformaticslab.github.io">Website</a>
+<a href="https://github.com/computationalneurobiology">GitHub</a></div>
 </div>
 
 
